
- Core: 
  . Fixed bug #69537 (__debugInfo with empty string for key gives error).
    (krakjoe)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)

- BCmath:
  . Fixed bug #72093 (bcpowmod accepts negative scale and corrupts
    _one_ definition). (Stas)

- Curl:
  . Fixed bug #71831 (CURLOPT_NOPROXY applied as long instead of string).
    (Michael Sierks)    

- Date:
  . Fixed bug #71889 (DateInterval::format Segmentation fault). (Thomas Punt)

- EXIF:
  . Fixed bug #72094 (Out of bounds heap read access in exif header processing). (Stas)

- GD:
  . Fixed bug #71952 (Corruption inside imageaffinematrixget). (Stas)
  . Fixed bug #71912 (libgd: signedness vulnerability). (CVE-2016-3074) (Stas)

- Intl:
  . Fixed bug #72061 (Out-of-bounds reads in zif_grapheme_stripos with negative
    offset). (Stas)

- OCI8:
  . Fixed bug #71422 (Fix ORA-01438: value larger than specified precision
    allowed for this column). (Chris Jones)

- ODBC:
  . Fixed bug #63171 (Script hangs after max_execution_time). (Remi)

- Opcache:
  . Fixed bug #71843 (null ptr deref ZEND_RETURN_SPEC_CONST_HANDLER).
    (Laruence)

- PDO:
  . Fixed bug #52098 (Own PDOStatement implementation ignore __call()).
    (Daniel Kalaspuffar, Julien)
  . Fixed bug #71447 (Quotes inside comments not properly handled). (Matteo)

- Postgres:
  . Fixed bug #71820 (pg_fetch_object binds parameters before call
    constructor). (Anatol)

- SPL:
  . Fixed bug #67582 (Cloned SplObjectStorage with overwritten getHash fails
    offsetExists()). (Nikita)

- Standard:
  . Fixed bug #71840 (Unserialize accepts wrongly data). (Ryat, Laruence)
  . Fixed bug #67512 (php_crypt() crashes if crypt_r() does not exist or
    _REENTRANT is not defined). (Nikita)

- XML:
  . Fixed bug #72099 (xml_parse_into_struct segmentation fault). (Stas)

31 Mar 2016, PHP 5.6.20

- CLI Server:
  . Fixed bug #69953 (Support MKCALENDAR request method). (Christoph)

- Core: